--- a/labtest.html
+++ b/labtest.html
@@ -73,7 +73,7 @@
 
   <!-- Book Now Button -->
   <div class="book-btn">
-    <a href="home.html#contact" class="btn btn-primary btn-lg px-4">Book Lab Test Now</a>
+    <a href="index.html#contact" class="btn btn-primary btn-lg px-4">Book Lab Test Now</a>
   </div>
 </div>
 
