--- a/eventdecorator.html
+++ b/eventdecorator.html
@@ -73,7 +73,7 @@
 
   <!-- Book Now Button -->
   <div class="book-btn">
-    <a href="index.html#contact" class="btn btn-danger btn-lg px-4">Book Now</a>
+    <a href="index.html#contact" class="btn btn-success btn-lg px-4">Book Now</a>
   </div>
 </div>
 
