--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#" style="color: white;">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="work-results.html"style="color: white;">Work Results</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="work-results.html"style="color: white;">Work Results</a></li> -->
           <li class="nav-item"><a class="nav-link" href="reviews.html"style="color: white;">Reviews</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact"style="color: white;">Contact</a></li>
         </ul>
