--- a/index.html
+++ b/index.html
@@ -238,6 +238,19 @@
   </div>
 </div> -->
 
+<h3 class="mt-5 mb-4 text-primary text-center">Transportation Service</h3>
+<div class="row">
+  <div class="col-md-3 col-sm-6">
+  <a href="cab.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/cab.png" alt="Lab Test at Home" class="img-fluid">
+      <h5 class="text-center mb-1">Taxi & Cab Services</h5>
+      
+    </div>
+  </a>
+</div>
+</div>
+
 <!-- Event Services -->
 <h3 class="mt-5 mb-4 text-primary text-center">Event Services</h3>
 <div class="row">
@@ -328,6 +341,9 @@
     <option>Car with Driver</option>
     <option>Machinery on Rent</option>
   </optgroup> -->
+  <optgroup label="Transportation Service">
+    <option>Taxi & Cab Services</option>
+  </optgroup>
   <optgroup label="Health Services">
     <option>Lab Test Home Collection</option>
   </optgroup>
