--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
     </div>
   </a>
 </div>
+<div class="col-md-3 col-sm-6">
+  <a href="Refrigerator.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/fridg.png" alt="Washing Machine" class="img-fluid">
+      <h5 class="text-center">Refrigerator</h5>
+    </div>
+  </a>
+</div>
   <div class="col-md-3 col-sm-6">
   <a href="waterpurifier.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -336,6 +344,7 @@
     <option>Welding & Fabrication</option>
     
     <option>AC Repair</option>
+    <option>Refrigerator</option>
   </optgroup>
   <!-- <optgroup label="Rental Services">
     <option>Car with Driver</option>
