--- a/labtest.html
+++ b/labtest.html
@@ -48,7 +48,7 @@
 
   <div class="service-box">
     <p class="service-title">2. Trusted Lab Collaborations</p>
-    <p class="service-description">We are partnered with top diagnostic labs like <strong>XXX Diagnostic Centre</strong> and <strong>XXX Diagnostics center</strong> to ensure accurate and reliable reports.</p>
+    <p class="service-description">We are partnered with top diagnostic labs with <strong>Apollo Diagnostics Centre</strong> to ensure accurate and reliable reports.</p>
   </div>
 
   <div class="service-box">
@@ -76,6 +76,22 @@
     <a href="index.html#contact" class="btn btn-primary btn-lg px-4">Book Lab Test Now</a>
   </div>
 </div>
+<footer class="footer bg-dark text-white pt-4 mt-5">
+  <div class="container text-center">
+    <p class="mb-2">© 2025 Satguru Services. All rights reserved.</p>
+    
+    <!-- Disclaimer -->
+    <p class="footer-disclaimer small">
+      Note: We collaborate with third-party with Apollo Diagnostics Center. Satguru Services acts only as a booking facilitator and does not directly operate services.
+    </p>
+
+    <div>
+      <a href="https://www.instagram.com/satguruservices/profilecard/?igsh=MXFuZHIwYWZ0ZDh1dg==" target="_blank"><i class="fab fa-instagram text-white me-3"></i></a>
+      <a href="https://wa.me/919908821112" target="_blank"><i class="fa-brands fa-whatsapp text text-white me-3"></i></a>
+    </div>
+  </div>
+</footer>
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
