--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
     </div>
   </a>
 </div>
+<div class="col-md-3 col-sm-6">
+  <a href="credit-card-services.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/cc.jpg" alt="Home Construction" class="img-fluid">
+      <h5 class="text-center">Credit Card Services</h5>
+    </div>
+  </a>
+</div>
   <!-- <div class="col-md-3 col-sm-6">
   <a href="eventdecorator.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -340,6 +348,7 @@
     <option>Water Purifier</option>
     <option>Vastu</option>
     <option>Home Construction</option>
+    <option>Credit Card Services</option>
     
     <option>Welding & Fabrication</option>
     
