--- a/labtest.html
+++ b/labtest.html
@@ -73,7 +73,7 @@
 
   <!-- Book Now Button -->
   <div class="book-btn">
-    <a href="index.html#contact" class="btn btn-primary btn-lg px-4">Book Lab Test Now</a>
+    <a href="https://wa.me/919908821112" class="btn btn-primary btn-lg px-4">Book Lab Test Now</a>
   </div>
 </div>
 <footer class="footer bg-dark text-white pt-4 mt-5">
