--- a/vastu.html
+++ b/vastu.html
@@ -78,7 +78,7 @@
 
   <!-- Book Now Button -->
   <div class="book-btn">
-    <a href="index.html#contact" class="btn btn-success btn-lg px-4">Book Now</a>
+    <a href="https://wa.me/919908821112" class="btn btn-success btn-lg px-4">Book Now</a>
   </div>
 </div>
 
