--- a/credit-card-services.html
+++ b/credit-card-services.html
@@ -24,7 +24,7 @@
       font-weight: 600;
       font-size: 20px;
       margin-bottom: 10px;
-      color: #0077b6;
+      color: #0d6efd;
     }
     .service-description {
       margin: 0;
