--- a/reviews.html
+++ b/reviews.html
@@ -69,7 +69,7 @@
       <!-- Review 2 -->
       <div class="col-md-4">
         <div class="card review-card p-4">
-          <div class="review-name mb-1">Neha Kapoor</div>
+          <div class="review-name mb-1">Neha</div>
           <div class="stars mb-2">
             <i class="bi bi-star-fill"></i>
             <i class="bi bi-star-fill"></i>
@@ -85,7 +85,7 @@
       <!-- Review 3 -->
       <div class="col-md-4">
         <div class="card review-card p-4">
-          <div class="review-name mb-1">Arjun Singh</div>
+          <div class="review-name mb-1">Ramesh</div>
           <div class="stars mb-2">
             <i class="bi bi-star-fill"></i>
             <i class="bi bi-star-fill"></i>
