--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
     </div>
   </nav>
 
-  <section class="py-5 text-center bg-light">
+  <section class="py-3 text-center bg-light">
     <div class="container">
       <h1 class="display-5 fw-bold">Satguru Services</h1>
       <p class="lead">One Call All Solutions..! Electricial, plumbing, carpenters,Tiles and more — Right At Your Doorstep.</p>
     </div>
   </section>
 
-  <section id="services" class="container py-5">
+  <section id="services" class="container pt-1 py-4">
     <!-- <h2 class="mb-4 text-center">Our Services</h2> -->
     <!-- Home Services -->
-<h3 class="mt-5 mb-4 text-primary text-center">Home Services</h3>
+<h3 class="mt-1 mb-4 text-primary text-center">Home Services</h3>
 <div class="row">
   <div class="col-md-3 col-sm-6">
     <a href="electrical.html" class="text-decoration-none text-dark">
@@ -164,13 +164,14 @@
   </a>
 </div>
   <div class="col-md-3 col-sm-6">
-  <a href="waterpurifier.html" class="text-decoration-none text-dark">
+  <a href="tv.html" class="text-decoration-none text-dark">
     <div class="service-card">
-      <img src="images/water2.jpg" alt="Water Purifier" class="img-fluid">
-      <h5 class="text-center">Water Purifier</h5>
+      <img src="images/tv.png" alt="Welding & Fabrication" class="img-fluid">
+      <h5 class="text-center">TV Repair</h5>
     </div>
   </a>
 </div>
+  
   <div class="col-md-3 col-sm-6">
   <a href="tiles.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -187,14 +188,15 @@
     </div>
   </a>
 </div>
-  <div class="col-md-3 col-sm-6">
-  <a href="vastu.html" class="text-decoration-none text-dark">
+<div class="col-md-3 col-sm-6">
+  <a href="interior.html" class="text-decoration-none text-dark">
     <div class="service-card">
-      <img src="images/vastu5.png" alt="Vastu" class="img-fluid">
-      <h5 class="text-center">Vastu</h5>
+      <img src="images/interior.png" alt="Home Construction" class="img-fluid">
+      <h5 class="text-center">Interior Designing Services</h5>
     </div>
   </a>
 </div>
+  
   <div class="col-md-3 col-sm-6">
   <a href="construction.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -203,6 +205,15 @@
     </div>
   </a>
 </div>
+<div class="col-md-3 col-sm-6">
+  <a href="vastu.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/vastu5.png" alt="Vastu" class="img-fluid">
+      <h5 class="text-center">Vastu</h5>
+    </div>
+  </a>
+</div>
+
 <div class="col-md-3 col-sm-6">
   <a href="credit-card-services.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -227,6 +238,22 @@
     </div>
   </a>
 </div>
+<div class="col-md-3 col-sm-6">
+  <a href="waterpurifier.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/water2.jpg" alt="Water Purifier" class="img-fluid">
+      <h5 class="text-center">Water Purifier</h5>
+    </div>
+  </a>
+</div>
+  <!-- <div class="col-md-3 col-sm-6">
+  <a href="tv.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/tv.png" alt="Welding & Fabrication" class="img-fluid">
+      <h5 class="text-center">TV Repair</h5>
+    </div>
+  </a>
+</div> -->
   <!-- <div class="col-md-3 col-sm-6">
   <a href="catering.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -254,7 +281,7 @@
   </div>
 </div> -->
 
-<h3 class="mt-5 mb-4 text-primary text-center">Transportation Service</h3>
+<h3 class="mt-5 mb-4 text-primary text-center">Taxi/Cab Service</h3>
 <div class="row">
   <div class="col-md-3 col-sm-6">
   <a href="cab.html" class="text-decoration-none text-dark">
@@ -345,6 +372,8 @@
     <option>Painting</option>
     <option>Tiles Work</option>
     <option>Washing Machine</option>
+    <option>TV Repair</option>
+    <option>Interior Designing Services</option>
     <option>Water Purifier</option>
     <option>Vastu</option>
     <option>Home Construction</option>
