--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <section class="py-3 text-center bg-light">
     <div class="container">
       <h1 class="display-5 fw-bold">Satguru Services</h1>
-      <p class="lead">One Call All Solutions..! Electricial, plumbing, carpenters,Interior Designing Services,Tiles and more — Right At Your Doorstep.</p>
+      <p class="lead">One Call All Solutions..! Electricial, Plumbing, Carpenters,Interior Designing,Tiles and more — Right At Your Doorstep.</p>
     </div>
   </section>
 
