--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     <option>Tiles Work</option>
     <option>Washing Machine</option>
     <option>TV Repair</option>
-    <option>Interior Designing Services</option>
+    <option>Interior Designing</option>
     <option>Water Purifier</option>
     <option>Vastu</option>
     <option>Home Construction</option>
