--- a/index.html
+++ b/index.html
@@ -246,6 +246,14 @@
     </div>
   </a>
 </div>
+<div class="col-md-3 col-sm-6">
+  <a href="deepclean.html" class="text-decoration-none text-dark">
+    <div class="service-card">
+      <img src="images/deepclean.png" alt="Water Purifier" class="img-fluid">
+      <h5 class="text-center">Deep Cleaning</h5>
+    </div>
+  </a>
+</div>
   <!-- <div class="col-md-3 col-sm-6">
   <a href="tv.html" class="text-decoration-none text-dark">
     <div class="service-card">
@@ -376,6 +384,7 @@
     <option>Interior Designing</option>
     <option>Water Purifier</option>
     <option>Vastu</option>
+    <option>Deep Cleaning</option>
     <option>Home Construction</option>
     <option>Credit Card Services</option>
     
