--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@
 
   <footer class="text-center" id="contact">
     <p>&copy; 2025 Satguru Services. All rights reserved.</p>
+    <p>
+    <a href="terms_and_conditions.html" target="_blank">Terms & Conditions</a> |
+    <a href="privacy_policy.html" target="_blank">Privacy Policy</a>
+  </p>
     <div>
       <a href="https://www.instagram.com/satguruservices/profilecard/?igsh=MXFuZHIwYWZ0ZDh1dg==" target="_blank"><i class="fab fa-instagram text-white me-3"></i></a>
       <a href="https://wa.me/919908821112" target="_blank"><i class="fa-brands fa-whatsapp text text-white me-3"></i></a>
