--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -81,6 +81,51 @@ code{background:#f4f4f4;padding:2px 6px;border-radius:4px}
   <h2>12. Changes to Terms</h2>
   <p>We may update these Terms periodically. Continued use of the App after changes indicates acceptance of the revised Terms.</p>
 </section>
+<br>
+<header>
+
+  <p><strong>Privacy Policy</strong><br/></p>
+</header>
+
+<section>
+  <h2>1. Information We Collect</h2>
+  <p>We collect information necessary to provide service: name, phone, email, address, service history, device and usage data, and payment details when required.</p>
+</section>
+
+<section>
+  <h2>2. How We Use Information</h2>
+  <p>We use data to operate the App, process bookings, communicate with users, prevent fraud, and improve services.</p>
+</section>
+
+<section>
+  <h2>3. Data Sharing</h2>
+  <p>We do not sell personal data. We share data with technicians (to fulfill bookings), payment processors (for transactions), and legal authorities when required by law.</p>
+</section>
+
+<section>
+  <h2>4. Security</h2>
+  <p>We implement reasonable measures to protect data. However, no internet transmission or storage is completely secure.</p>
+</section>
+
+<section>
+  <h2>5. User Rights</h2>
+  <p>Users may request access, correction, or deletion of their personal data by contacting us at satguruservices22@gmail.com</p>
+</section>
+
+<section>
+  <h2>6. Cookies and Analytics</h2>
+  <p>We may use cookies and analytics tools to measure and improve App performance.</p>
+</section>
+
+<section>
+  <h2>7. Children</h2>
+  <p>Our services are not directed to children under 18. We do not intentionally collect information from minors.</p>
+</section>
+
+<section>
+  <h2>8. Changes to Policy</h2>
+  <p>We may update this policy from time to time; the latest version will be available in the App.</p>
+</section>
 
 <footer class="footer">
   <p>Contact: Email:satguruservices22@gmail.com | Phone: +91-9908821112.</p>
