--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -64,7 +64,7 @@ code{background:#f4f4f4;padding:2px 6px;border-radius:4px}
 
 <section>
   <h2>9. Data and Privacy</h2>
-  <p>Your personal data is processed according to our <a href="privacy_policy.html">Privacy Policy</a>. We do not sell personal data to third parties.</p>
+  <p>Your personal data is processed according to our Privacy Policy. We do not sell personal data to third parties.</p>
 </section>
 
 <section>
